fixtures/frontend/milestone-2/valid/source-option-imported-binding-match/main.aivi
use aivi.network (
    http
    socket
)

type HttpError =
  | Timeout

type User = {
    id: Int
}

type Map K V =
  | EmptyMap
  | Entry K V (Map K V)

@source http.get "/users" with {
    query: Entry http socket EmptyMap
}
sig users : Signal (Result HttpError (List User))
