fixtures/frontend/milestone-2/invalid/source-option-imported-binding-mismatch/main.aivi
use aivi.network (
    http
)

@source timer.every 120 with {
    immediate: http
}
sig tick : Signal Unit
